--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Odin Recipes</h1>
 
         <a href="lasagna.html">Lasagna</a>
-    
+        <a href="chicken.html">Chicken</a>
     </body>
 
 
