Add cheesecake to list in index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <a href="lasagna.html">Lasagna</a>
         <a href="chicken.html">Chicken</a>
+        <a href="cheesecake.html">Cheesecake</a>
     </body>
 
 
