Create unordered list of recipes

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
-        <a href="lasagna.html">Lasagna</a>
-        <a href="chicken.html">Chicken</a>
-        <a href="cheesecake.html">Cheesecake</a>
+        <ul>
+            <li><a href="lasagna.html">Lasagna</a></li>
+            <li><a href="chicken.html">Chicken</a></li>
+            <li><a href="cheesecake.html">Cheesecake</a></li>
+        </ul>
     </body>
 
 
