Move recipes to recipes folder

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -8,7 +8,7 @@
     <body>
         <h1>A Great Cheesecake Recipe</h1>
 
-        <img src="img/cheesecake.jpg" alt="A Picture of Cheesecake">
+        <img src="../img/cheesecake.jpg" alt="A Picture of Cheesecake">
 
         <h2>Description</h2>
         
