--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="lasagna.html">Lasagna</a></li>
-            <li><a href="chicken.html">Chicken</a></li>
-            <li><a href="cheesecake.html">Cheesecake</a></li>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/chicken.html">Chicken</a></li>
+            <li><a href="recipes/cheesecake.html">Cheesecake</a></li>
         </ul>
     </body>
 
