--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -8,7 +8,7 @@
     <body>
         <h1>A Great Aztec Chicken Recipe</h1>
 
-        <img src="img/chicken.jpg" alt="A Picture of Chicken">
+        <img src="../img/chicken.jpg" alt="A Picture of Chicken">
 
         <h2>Description</h2>
         
