--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
     <body>
         <h1>A Great Lasagna Recipe</h1>
 
-        <img src="img/lasagna.jpg" alt="A Picture of Lasagna">
+        <img src="../img/lasagna.jpg" alt="A Picture of Lasagna">
 
         <h2>Description</h2>
         
