Add consistent styles to pages

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/chicken.html">Chicken</a></li>
-            <li><a href="recipes/cheesecake.html">Cheesecake</a></li>
+        <h1 class="title">Odin Recipes</h1>
+        <ul id='main-list'>
+            <li class='main-items'><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li class='main-items'><a href="recipes/chicken.html">Chicken</a></li>
+            <li class='main-items'><a href="recipes/cheesecake.html">Cheesecake</a></li>
         </ul>
     </body>
 
