--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -8,17 +8,17 @@
     </head>
 
     <body>
-        <h1>A Great Aztec Chicken Recipe</h1>
+        <h1 class='title'>A Great Aztec Chicken Recipe</h1>
 
-        <img src="../img/chicken.jpg" alt="A Picture of Chicken">
+        <img class='main-picture' src="../img/chicken.jpg" alt="A Picture of Chicken">
 
-        <h2>Description</h2>
+        <h2 class='section-header'>Description</h2>
         
-        <p>A great taste of central Mexico with a little heat and quite a bit of flavor! Garnish with two halves grilled plantain or banana and cilantro.</p>
+        <p class='descriptions'>A great taste of central Mexico with a little heat and quite a bit of flavor! Garnish with two halves grilled plantain or banana and cilantro.</p>
 
-        <h2>Ingredients</h2>
+        <h2 class='section-header'>Ingredients</h2>
 
-        <ul>
+        <ul class='descriptions'>
             <li>Canola oil</li>
             <li>6 tablespoons honey </li>
             <li>1 tablespoon ancho chile powder </li>
@@ -32,9 +32,9 @@
             <li>¼ cup heavy whipping cream </li>
         </ul>
 
-        <h2>Steps</h2>
+        <h2 class='section-header'>Steps</h2>
 
-        <ol>
+        <ol class='descriptions'>
             <li>Combine oil, honey, ancho chile powder, garlic, and hot sauce in a bowl; whisk together. Place chicken breasts in a large resealable plastic bag; pour in marinade and close bag. Marinate in refrigerator, 3 hours to overnight.</li>
             <li>Preheat oven to 450 degrees F (230 degrees C).</li>
             <li>Place sweet potatoes on a baking sheet. Place corn in a shallow baking pan. Brush with canola oil; season with salt and pepper. Cover pan with aluminum foil.</li>
