--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,17 +8,17 @@
     </head>
 
     <body>
-        <h1>A Great Lasagna Recipe</h1>
+        <h1 class='title'>A Great Lasagna Recipe</h1>
 
-        <img src="../img/lasagna.jpg" alt="A Picture of Lasagna">
+        <img class='main-picture' src="../img/lasagna.jpg" alt="A Picture of Lasagna">
 
-        <h2>Description</h2>
+        <h2 class='section-header'>Description</h2>
         
-        <p>This no-bake skillet lasagna is made right on your stovetop and is a fast and easy alternative to store-bought hamburger mixes!</p>
+        <p class='descriptions'>This no-bake skillet lasagna is made right on your stovetop and is a fast and easy alternative to store-bought hamburger mixes!</p>
 
-        <h2>Ingredients</h2>
+        <h2 class='section-header'>Ingredients</h2>
 
-        <ul>
+        <ul class='descriptions'>
             <li>½ pound ground beef </li>
             <li>½ (28 ounce) jar spaghetti sauce </li>
             <li>1 (14.5 ounce) can diced tomatoes </li>
@@ -32,9 +32,9 @@
             <li>1 cup shredded mozzarella cheese </li>
         </ul>
 
-        <h2>Steps</h2>
+        <h2 class='section-header'>Steps</h2>
 
-        <ol>
+        <ol class='descriptions'>
             <li>Heat a large skillet over medium-high heat. Cook and stir beef in the hot skillet until browned and crumbly, 5 to 7 minutes. Drain and discard grease. Add spaghetti sauce, tomatoes, onion, garlic, basil, oregano, salt, and pepper. Cook over low heat until sauce is hot, about 15 minutes.</li>
             <li>Meanwhile, fill a large pot with lightly salted water and bring to a rolling boil. Cook mafalda noodles at a boil until tender yet firm to the bite, about 8 minutes. Drain.</li>
             <li>Add cooked and drained noodles to the sauce and stir until completely coated. Sprinkle mozzarella cheese on top.</li>
